--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -43,5 +43,19 @@
     margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
+    font-size: 16px;
+    font-family: 'Varela Round', sans-serif;
     color: #b39656;
+}
+
+.singlePostDesc {
+    color: #666;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.singlePostDesc::first-letter {
+    margin-left: 20px; 
+    font-size: 30px;
+    font-weight: 600;
 }
